# project-genesis-nebula

./: CITATION.cite  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
Shenqu-Algorithm/: CITATION.cite  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  setup.py
Shenqu-Algorithm/docs/: conf.py  theory.rst
Shenqu-Algorithm/examples/: __init__.py
Shenqu-Algorithm/examples/notebook/: __init__.py
Shenqu-Algorithm/examples/notebooks/: 01-basic-demo.ipynb
Shenqu-Algorithm/shenqu/: __init__.py  calibration.py  core.py
Shenqu-Algorithm/tests/: __init__.py  test_calibration.py
docs/: index.rst
examples/: basic_usage.ipynb  basic_usage.py
examples/notebooks/: 02-performance-benchmark.ipynb
shenqu/: calibration.py  core.py
tests/: test_calibration.py  test_core.py
