[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shenqu-algorithm"
dynamic = ["version"]
description = "Symmetry-based calibration algorithm for analog and quantum systems"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "jupyter>=1.0.0", 
    "ipykernel>=6.0",
]
